# prumo

./: .cursorignore  .dockerignore  .env.e2e.example  .env.example  .gitignore  .markdownlintignore  .mcp.json  AGENTS.md  AJUSTES_FINAIS_EXTRACTION.md  ANALISE_CRITICA_CODEBASE.md  ANALISE_CRITICA_TABELAS_EXTRACTION.md  ANALISE_DUPLICATAS_ZOTERO.md  ANALISE_HIGHLIGHT_MULTILINHAS.md  ARQUITETURA_PDFVIEWER_VISUAL.md  ARQUITETURA_TEMPLATES_EXPLICADA.md  ASSESSMENT_POR_MODELO_README.md  ATUALIZACAO_GESTAO_MEMBROS.md  BACKGROUND_JOBS_SYSTEM.md  CHANGELOG.md  CHANGELOG_PDFVIEWER.md  CHARMS_2.0_HIERARQUIA_VISUAL.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURACOES_PROJETO_REFATORACAO.md  CONTRIBUTING.md  COPYRIGHT.txt  CORRECAO_FINAL_PDFVIEWER.md  CORRECAO_SINCRONIZACAO_FINAL.md  CORRECOES_CRITICAS_PDFVIEWER.md  CORRECOES_FINAIS_EXTRACTION.md  CORRECOES_PICOTS.md  DIAGRAMA_FLUXO_EXTRACTION.md  EXPLICACAO_INSTANCES_DIDATICA.md  FIX_FINAL_HIGHLIGHT_SELECT.md  FIX_VALIDACAO_PAGINA.md  GUIA_PICOTS_CONFIGURACAO.md  GUIA_RAPIDO_EXTRACTION.md  IMPLEMENTACAO_BACKGROUND_JOBS.md  IMPLEMENTACAO_BOTOES_IA.md  IMPLEMENTACAO_IA_MELHORIAS.md  (+55 more)
backend/: .coverage_critical  .dockerignore  .env.example  .env.render.example  .mypy_baseline  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: README  env.py
backend/alembic/versions/: .gitkeep  0001_baseline_v1.py  0001_initial_public_schema.py  0002_drop_extracted_values.py  0002_seed_instruments.py  0003_storage_object_policies.py  0004_template_active_version_invariant.py  0005_hitl_invariants.py  0006_article_text_blocks.py  0007_drop_migration_status.py  0008_function_hardening.py  0009_tighten_rls_policies.py  0010_lock_handle_new_user.py  0011_proposal_fk_restrict.py  0012_consensus_decision_run_fk.py  0013_fix_calculate_model_progress.py  0014_one_active_extraction_tpl.py  0015_charms_studylevel_split.py  0015_harden_model_progress_acl.py  0016_entity_role_column.py  0017_backfill_role_in_snapshot.py  0018_lock_article_authors_rls.py  0019_gate_find_user_id_by_email.py  0020_feedback_outbox.py  0020_guard_get_project_members_rpc.py  0021_reconcile_feedback_rls.py  0022_scope_model_progress_run.py  0023_consensus_fk_restrict.py  0023_workflow_article_coherence.py  0024_consensus_fk_restrict.py  0025_reviewer_scoped_select_rls.py  0026_widen_template_snapshot.py  0026_widen_template_version_snapshot.py  0027_api_key_llama_cloud.py  0027_project_is_phi.py  0028_api_key_llama_cloud.py  0028_run_stage_extract.py  0029_reviewer_ready_flag.py  0030_drop_instance_status.py  0031_unique_article_text_block_idx.py  (+23 more)
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  config_validators.py  deps.py  error_handler.py  factories.py  logging.py  middleware.py  security.py  transactions.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/llm/: __init__.py  assembler.py  claim_value.py  entailment.py  errors.py  extractor.py  observability.py  provider.py  schema.py  validators.py  value_support.py
backend/app/models/: __init__.py  article.py  article_author.py  assessment.py  base.py  evaluation_decision.py  evaluation_run.py  evaluation_schema.py  extraction.py  extraction_versioning.py  extraction_workflow.py  feedback.py  integration.py  project.py  screening.py  user.py  user_api_key.py
backend/app/repositories/: __init__.py  article_author_repository.py  article_repository.py  article_text_block_repository.py  assessment_repository.py  base.py  evaluation_consensus_repository.py  evaluation_evidence_repository.py  evaluation_proposal_repository.py  evaluation_published_state_repository.py  evaluation_repository_base.py  evaluation_reviewer_decision_repository.py  evaluation_reviewer_state_repository.py  evaluation_run_repository.py  evaluation_schema_version_repository.py  extraction_consensus_decision_repository.py  extraction_proposal_repository.py  extraction_published_state_repository.py  extraction_repository.py  extraction_reviewer_decision_repository.py  extraction_reviewer_ready_repository.py  extraction_reviewer_state_repository.py  extraction_run_repository.py  extraction_template_version_repository.py  hitl_config_repository.py  integration_repository.py  project_repository.py  screening_repository.py  unit_of_work.py  user_api_key_repository.py
backend/app/schemas/: __init__.py  article.py  article_import.py  articles_export.py  assessment.py  common.py  evaluation_common.py  evaluation_consensus.py  evaluation_review.py  evaluation_runs.py  evaluation_schema_versions.py  extraction.py  extraction_export.py  extraction_run.py  extraction_suggestion.py  feedback.py  hitl_config.py  hitl_session.py  manager_review_visibility.py  parser_settings.py  project.py  qa_template.py  screening.py  user_api_key.py  zotero.py
backend/app/services/: __init__.py  _extraction_run_lock.py  ai_assessment_service.py  ai_screening_service.py  api_key_service.py  article_file_ingest_service.py  article_file_service.py  article_import_service.py  article_source_normalization.py  article_text_block_read_service.py  articles_export_service.py  citation_read_service.py  coordinate_coherence.py  document_parsing_service.py  evaluation_consensus_service.py  evaluation_evidence_service.py  evaluation_observability_service.py  evaluation_proposal_service.py  evaluation_review_service.py  evaluation_run_service.py  evaluation_schema_promotion_service.py  evaluation_schema_version_service.py  evaluation_sla_metrics_service.py  evidence_anchor_service.py  extraction_block_assembler.py  extraction_consensus_service.py  extraction_errors.py  extraction_export_service.py  extraction_prompt_input.py  extraction_proposal_service.py  extraction_review_service.py  extraction_reviewer_ready_service.py  extraction_run_read_service.py  extraction_snapshot.py  extraction_suggestion_read_service.py  feedback_service.py  (+20 more)
backend/scripts/: apply_supabase_migrations.sh  setup.sh
backend/tests/: __init__.py  conftest.py  test_health.py
(+2395 files in other folders)
