[project]
name = "review-hub-backend"
version = "0.1.0"
description = "Backend FastAPI para Prumo - Plataforma de Revisão Sistemática"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"
authors = [
    { name = "Raphael Federicci Haddad" }
]

dependencies = [
    # FastAPI & ASGI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=21.2.0",  # Production WSGI server
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy async operations
    # Migrations
    "alembic>=1.13",
    "psycopg[binary]>=3.1", # Sync driver required for startup migration check
    # Validation & Settings
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP Client
    "httpx>=0.27.0",
    # Supabase SDK (Storage)
    "supabase>=2.0.0",
    # AI/LLM
    "openai>=1.0.0",
    "pydantic-ai-slim[openai]>=1.107.0,<2.0.0",
    "logfire[fastapi,celery]>=3.0.0",
    # PDF Processing
    "pypdf>=5.0.0",
    "docling>=2.0.0",
    # Observability
    "structlog>=24.0.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # Utils
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # Spreadsheet generation (extraction Excel export)
    "openpyxl>=3.1.5",
    "llama-cloud>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.16",
    "pytest-deadfixtures>=2.2",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "celery-types>=0.22.0",
    "pre-commit>=4.0.0",
    # CI diff coverage gate (see .github/workflows/ci.yml "Diff coverage gate"
    # step). PR-only check: lines touched by the PR must hit
    # PRUMO_DIFF_COVERAGE_MIN (default 80%). Coexists with the global ratchet
    # `--cov-fail-under=62` — diff coverage catches "PR drops new code without
    # tests" before the global gate notices the dip.
    "diff-cover>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "UP042",  # str+Enum kept for SQLAlchemy/Pydantic compatibility (StrEnum migration deferred)
]

[tool.ruff.lint.per-file-ignores]
# Multiline fixture strings use indented blank lines; trailing space in SQL snippets.
"tests/**" = ["W291", "W293"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Make the standalone research harnesses under backend/scripts importable
# from tests (e.g. the parsing bake-off) without packaging them as app code.
pythonpath = ["scripts"]
# --strict-markers: typo'd marker (@pytest.mark.intergration vs integration)
# now fails the test instead of silently being ignored. Catches the class
# of "marker doesn't filter what you think it filters" bug.
addopts = "-v --tb=short --strict-markers -m 'not llm'"
markers = [
    "e2e: end-to-end tests against live stack",
    "performance: performance-sensitive or long-running tests",
    "integration: integration test requiring db_session + seeded fixtures from tests/integration/conftest.py",
    "llm: live LLM smoke test; deselected by default via addopts, run with -m llm and PRUMO_LLM_SMOKE=1",
]


[tool.coverage.run]
# Focus coverage on code that is actually exercised and maintained.
# Directories listed here are intentionally excluded — `app/worker/*`
# was previously here but PR 2 of the worker-hardening plan added real
# tests (loop-isolation regression + eager-mode integration + drift
# guard), so it has real coverage numbers now.
omit = [
    "app/schemas/read_models/*",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-randomly>=3.16",
    "pytest-deadfixtures>=2.2",
    "mutmut>=3.0",
    "celery-types>=0.26.0",
]

[tool.mutmut]
# Mutation testing — used by `scripts/run_mutation_tests.sh` and the weekly
# CI cron job. Scoped to extraction services because they are the most
# regression-prone path in prumo's HITL stack.
paths_to_mutate = "app/services/extraction_consensus_service.py,app/services/extraction_proposal_service.py,app/services/extraction_review_service.py"
runner = "uv run pytest -x -q"
tests_dir = "tests/unit"
backup = false
